--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,3 +18,4 @@ add_subdirectory("lua-5.4.8")
 add_subdirectory("miniaudio")
 add_subdirectory("stb")
 add_subdirectory("RectangleBinPack")
+add_subdirectory("fribidi")
