fix: fribidi macro export

--- a/fribidi/CMakeLists.txt
+++ b/fribidi/CMakeLists.txt
@@ -8,7 +8,7 @@ file(GLOB_RECURSE FILES
 add_library(${MODULE_NAME} STATIC ${FILES})
 target_compile_definitions(${MODULE_NAME} PRIVATE "HAVE_CONFIG_H")
 
-target_compile_definitions(${MODULE_NAME} PRIVATE "FRIBIDI_LIB_STATIC")
+target_compile_definitions(${MODULE_NAME} PUBLIC "FRIBIDI_LIB_STATIC")
 
 target_include_directories(${MODULE_NAME} PUBLIC 
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/Source/public>
