--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,3 +20,4 @@ add_subdirectory("stb")
 add_subdirectory("RectangleBinPack")
 add_subdirectory("fribidi")
 add_subdirectory("harfbuzz")
+add_subdirectory("efsw")
