--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,3 +22,4 @@ add_subdirectory("fribidi")
 add_subdirectory("harfbuzz")
 add_subdirectory("efsw")
 add_subdirectory("SPIRV-Cross")
+add_subdirectory("stduuid")
