add: nlohmann.json; add:  tinygltf

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,3 +23,5 @@ add_subdirectory("harfbuzz")
 add_subdirectory("efsw")
 add_subdirectory("SPIRV-Cross")
 add_subdirectory("stduuid")
+add_subdirectory("tinygltf")
+add_subdirectory("nlohmann_json")
